<resources>
    <string name="app_name">Market</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="productos">Productos</string>
    <string name="carrito">Carrito</string>
    <string name="equivale">Equivale</string>
    <string name="example_unit">x100g</string>
    <string name="example_price">$2000,50</string>
    <string name="calculadora">Calculadora</string>
    <string name="agregar">Agregar</string>
    <string name="actualizar">Actualizar</string>
    <string name="quitar">Quitar</string>
    <string name="precio_total">Precio total</string>
    <string name="email_select_description">Es necesario seleccionar un correo electrónico para identificar a los clientes al momento de realizar pedidos.</string>
    <string name="email_select_title">Selección de correo</string>
    <string name="email_select_accept">Aceptar</string>
    <string name="email_select_cancel">Cancelar</string>
    <string name="shoping_cart_send_order">Hacer pedido</string>
    <string name="historial">Historial</string>
</resources>